--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -513,6 +513,15 @@ ul li a:hover + .hidden, .hidden:hover {
   transform: none;
 }
 
+.nav-in{
+  cursor: pointer;
+}
+
+.slideInLeft li {
+cursor: pointer;
+}
+
+
 
 /*********************************************************************************************************************************************************************************
 ************************************************************Responsive Styles*****************************************************************************************/
