--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -88,12 +88,14 @@
                             A Platform to interchange your views on technology <br />
 
                         </p>
-                        <button class="custom-ss-quick-register-block-button">Register &amp; Connect &amp; Talk </button>
+                        <button class="custom-ss-quick-register-block-button">Register &amp; Connect &amp; Talk
+                        </button>
                     </div>
 
                     <div class="col-md-6 col-sm-6" *ngIf="showAcadamicProz">
                         <p>
-                            An initiative platform to express &amp; excute your brilliant idea with help of co-students ,
+                            An initiative platform to express &amp; excute your brilliant idea with help of co-students
+                            ,
                             Academicians
                             , Industrial Experts &amp; Sponsors support <br />
                             <br />
@@ -105,7 +107,8 @@
 
                     <div class="col-md-6 col-sm-6" *ngIf="showStuation">
                         <p>
-                            An initiative platform to express &amp; excute your brilliant idea with help of co-students ,
+                            An initiative platform to express &amp; excute your brilliant idea with help of co-students
+                            ,
                             Academicians
                             , Industrial Experts &amp; Sponsors support<br />
 
@@ -125,7 +128,8 @@
                     </div>
 
                     <div class="col-md-6 col-sm-6" *ngIf="showEngship">
-                        <p> Are you looking for guidance , encouragement &amp; support from trusted experience professional
+                        <p> Are you looking for guidance , encouragement &amp; support from trusted experience
+                            professional
                             ?<br />
                             <br />
                             A Platform to connect Mentor &amp; Mentee
@@ -233,33 +237,34 @@
 
         <div class="container-fluid calender">
             <div class="row">
-                    <div class="col-md-2 custom-ss-our-events-block">
-                            <ul class="custom-ss-our-event-menu-block" id="mydiv">
-                                <li class="active">
-                                    <a href="#">
-                                        <h4>Tech Teach</h4>
-                                        <img src="../assets/images/events-tech-talk.png">
-                                        <p>6 Events</p>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="#">
-                                        <h4>Tech Talk</h4>
-                                        <img src="../assets/images/tech-teach-events.png">
-                                        <p>12 Events</p>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="#">
-                                        <h4>All Events</h4>
-                                        <img src="../assets/images/events.png">
-                                        <p>18 Events</p>
-                                    </a>
-                                </li>
-                            </ul>
-                        </div>
-                        <div class="col-md-3 custom-ss-our-events-block custom-ss-events-info">
-                            <div>
+                <div class="col-md-2 custom-ss-our-events-block">
+                    <ul class="custom-ss-our-event-menu-block" id="mydiv">
+                        <li class="active">
+                            <a href="#">
+                                <h4>Tech Teach</h4>
+                                <img src="../assets/images/events-tech-talk.png">
+                                <p>6 Events</p>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <h4>Tech Talk</h4>
+                                <img src="../assets/images/tech-teach-events.png">
+                                <p>12 Events</p>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <h4>All Events</h4>
+                                <img src="../assets/images/events.png">
+                                <p>18 Events</p>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="col-md-3 custom-ss-our-events-block custom-ss-events-info">
+                    &nbsp;
+                    <!-- <div>
                                 <h2>Latest Events</h2>
                                 <div class="custom-ss-event-date-info">
                                     <h3>Environmental Engineering</h3>
@@ -287,8 +292,8 @@
                                     </div>
                                     <div class="btn custom-ss-event-btn">Register Now</div>
                                 </div>
-                            </div>
-                        </div>
+                            </div> -->
+                </div>
                 <div class="col-md-7 col-lg-7">
                     <!-- <ng-fullcalendar #ucCalendar [options]="calendarOptions"></ng-fullcalendar> -->
                     <div [ngSwitch]="view" style="background-color: white !important;">
