--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -72,10 +72,13 @@
                 <nav role="navigation slideInLeft">
                     <div id="menuToggle">
                         <input type="checkbox" class="nav-in" (click)="openmenu()" />
+                        <!-- <span></span>
                         <span></span>
-                        <span></span>
-                        <span></span>
+                        <span></span> -->
+                        <img class="toggle-menu-icon" src="../assets/images/menu-icon.png" (click)="openmenu()">
+                       
                         <ul id="menu" class="animated slideInLeft" *ngIf="navbarOpen">
+                                <li><a (click)="hidemenu()" >x</a></li>
                             <li><a (click)="goHome()">Home</a></li>
                             <li><a href="#">Tech World ￬</a>
                                 <ul class="hidden sub-drop">
@@ -169,7 +172,9 @@
         <div class="w_100">
             <h1 class="custom-heading animated zoomInLeft"><span>STUVATION</span></h1>
             <p class="custom-ss animated fadeInRight">S t u d e n t <span>+</span> i n n o v a t i o n</p>
-            <div class="container-fluid">
+            <p class="arrows"><i class="fa fa-arrow-circle-left" (click)="decreaseSlider()"></i>&nbsp;&nbsp;
+                <span>{{sliderValue}}</span>&nbsp;&nbsp;<i class="fa fa-arrow-circle-right" (click)="increaseSlider()"></i></p>
+            <div class="container-fluid" *ngIf="firstSlide">
                 <div class="row ">
                     <div class="img-lft col-md-6 col-sm-12 animated fadeInLeft">
                         <img src="assets/images/tef-stuvation.png" />
@@ -188,9 +193,33 @@
                     <div class="col-md-1 col-sm-0"></div>
                 </div>
             </div>
+
+            <div class="container-fluid" *ngIf="secondSlide">
+                <div class="row ">
+                    <div class="img-lft col-md-6 col-sm-12 animated fadeInLeft">
+                        <img src="assets/images/slide2.png" />
+                    </div>
+                    <div class="col-md-5 col-sm-12 animated fadeInRight">
+                        <div class="content-ryt">
+                            <p> An initative plateform launched by The Engineers Factory through which students
+                                can get help from co-students, Academicians ,Industrial Experts &amp;
+                                sponsers to execute yourbrilliant innovative thoughts and
+                                academics projucts thus creating a path from being a student to the
+                                next Aryabhata.</p>
+                            <h3 class="custom-s-content"> <span>" </span>IT'S NOT ABOUT IDEAS.<br> ITS ABOUT MAKING
+                                IDEAS
+                                HAPPEN</h3>
+
+                        </div>
+                    </div>
+                    <div class="col-md-1 col-sm-0"></div>
+                </div>
+            </div>
         </div>
 
     </div>
+
+
     <!--row end-->
 
 
