--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -78,7 +78,7 @@
                         <img class="toggle-menu-icon" src="../assets/images/menu-icon.png" (click)="openmenu()">
                        
                         <ul id="menu" class="animated slideInLeft" *ngIf="navbarOpen">
-                                <li><a (click)="hidemenu()" >x</a></li>
+                                <li><a (click)="hidemenu()" class="close_btn">x</a></li>
                             <li><a (click)="goHome()">Home</a></li>
                             <li><a href="#">Tech World ￬</a>
                                 <ul class="hidden sub-drop">
