--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -483,6 +483,8 @@
   -webkit-box-shadow: 3px 20px 43px 3px rgba(201,197,201,1);
   -moz-box-shadow: 3px 20px 43px 3px rgba(201,197,201,1);
   box-shadow: 3px 20px 43px 3px rgba(201,197,201,1);
+  border:0;
+  outline: 0;
 }
 
 
