--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -295,8 +295,8 @@
                             </div> -->
                 </div>
                 <div class="col-md-7 col-lg-7">
-                    <!-- <ng-fullcalendar #ucCalendar [options]="calendarOptions"></ng-fullcalendar> -->
-                    <div [ngSwitch]="view" style="background-color: white !important;">
+                    <ng-fullcalendar #ucCalendar [options]="calendarOptions"></ng-fullcalendar>
+                    <!-- <div [ngSwitch]="view" style="background-color: white !important;">
                         <mwl-calendar-month-view *ngSwitchCase="'month'" [viewDate]="viewDate" [events]="events"
                             [refresh]="refresh" [activeDayIsOpen]="activeDayIsOpen" (dayClicked)="dayClicked($event.day)"
                             (eventClicked)="handleEvent('Clicked', $event.event)" (eventTimesChanged)="eventTimesChanged($event)">
@@ -308,7 +308,7 @@
                         <mwl-calendar-day-view *ngSwitchCase="'day'" [viewDate]="viewDate" [events]="events" [refresh]="refresh"
                             (eventClicked)="handleEvent('Clicked', $event.event)" (eventTimesChanged)="eventTimesChanged($event)">
                         </mwl-calendar-day-view>
-                    </div>
+                    </div> -->
                 </div>
 
             </div>
