--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -615,11 +615,13 @@ img.custom-ss-student-thoughts-block-img {
  .custom-ss-events-info {
   background: #191970;
   float: left;
-  height: 600px;
+  height: 733px;
+  overflow: auto;
 }
  .custom-ss-events-info h2 {
   color: #c3c3c3 !important;
   text-align: center !important;
+  font-size: 42px;
 }
 
  .custom-ss-events-info .custom-ss-event-date-info {
@@ -639,8 +641,50 @@ img.custom-ss-student-thoughts-block-img {
   margin: 0px;
 }
 
+.custom-ss-our-event-menu-block li{
+  cursor: pointer;
+}
+.calender-img{
+position: absolute;
+    width: 80px;
+  }
+.cal-date{
+  position: absolute;
+  top: 31px;
+  color: white;
+  font-size: 34px;
+  left: 45px;
+  }
+
+  .custom-ss-our-events-block li:hover, .custom-ss-our-events-block .active {
+    border-bottom: 8px solid #1099ca;
+    -webkit-box-shadow: 1px 6px 49px -4px rgba(0, 0, 0, 0.75);
+    -moz-box-shadow: 1px 6px 49px -4px rgba(0, 0, 0, 0.75);
+    box-shadow: 1px 6px 49px -4px rgba(0, 0, 0, 0.75);
+}
 
 
+.calender-div{
+  box-shadow: 0 0px 10px #C3C3C3;
+  background-color: white;
+  border-radius: 10px;
+}
+
+ .custom-ss-event-btn {
+  border-radius: 20px;
+  padding: 9px 16px;
+  background: #c3c3c3;
+  color: blue;
+  font-size: 24px;
+  margin: 10px 0px;
+  vertical-align: middle;
+}
+
+.custom-ss-event-date-info p{
+  font-size: 25px;
+  color: white;
+  text-align: justify;
+}
 
 
  /***************mediaquaries*********/
